# thor_pax1000_py

./: pyproject.toml
src/thor_pax1000_py/: __init__.py  polarimeter.py
